<resources>
    <string name="app_name">MyF1App</string>


    <!-- SplashActivity -->
    <string name="splash_activity_delay_ms">3000</string>

    <!-- General Tab Fragment -->
    <string name="drivers_tab_layout_name">Drivers</string>
    <string name="circuit_tab_layout_name">Circuits</string>
    <string name="invalid_error_tab_layout">Invalid Tab</string>
    <string name="number_of_tabs_created_general_tab_layout">2</string>

    <!-- Drivers list -->
    <string name="default_url_image">https://png.pngtree.com/png-vector/20191030/ourlarge/pngtree-racing-helmet-icon-simple-style-png-image_1911229.jpg</string>
    <string name="season_actual_year">2023</string>
    <string name="error_list">Error fetching list</string>
    <string name="error_detail">Error fetching item</string>
    <string name="action_ok">OK</string>
    <string name="action_retry">Retry</string>
    <string name="drivers_colors_available">12</string>
    <string name="fonts_available">5</string>

    <!-- DEtail views -->
    <string name="driver_detail_title">Driver detail</string>
    <string name="circuit_detail_title">Circuit detail</string>
    <string name="map_detail_title">Map view</string>
    <string name="btn_more_info_text">More info</string>
    <string name="driver_detail_info_nationality">Nationality</string>
    <string name="driver_detail_info_date_birth">Date of birth</string>
    <string name="circuit_detail_info_locality">Locality</string>
    <string name="circuit_detail_info_btn_maps">Open in map</string>
    <string name="error_google_maps">Please install google maps to use this button</string>

    <!-- Preferences -->
    <string name="DRIVER_PREFERENCES_NAME">driverPreferences</string>
    <string name="DRIVER_PREFERENCES_KEY_PREFIX_COLOR">driverPreferenceColor</string>
    <string name="DRIVER_PREFERENCES_KEY_PREFIX_FONT">driverPreferenceFont</string>
    <string name="CIRCUIT_PREFERENCES_NAME">circiutPreferences</string>


</resources>