<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.CircuitsDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header_detail_circuit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/main_red_color">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_detail_circuit_back_arrow"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_back_arrow_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/med_margin"
            android:tint="@color/main_white_color"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circuit_detail_title"
            style="@style/detail_page_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_header_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_header_detail_circuit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/main_red_color"
        app:strokeWidth="2dp"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_detail_circuit_image"
                android:layout_width="@dimen/image_item_detail_size"
                android:layout_height="@dimen/image_item_detail_size"
                tools:background="@color/main_red_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/med_margin"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_detail_circuit_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/iv_detail_circuit_image"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_circuit_image"
                tools:text="Australia"
                android:layout_marginHorizontal="@dimen/med_margin"
                android:textSize="20sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_detail_ciruit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/iv_detail_circuit_image"
                app:layout_constraintBottom_toBottomOf="@+id/iv_detail_circuit_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_circuit_country"
                android:maxLines="3"
                android:layout_marginHorizontal="@dimen/med_margin"
                tools:text="Albert Park Grand Prix Circuit"
                android:textColor="@color/main_red_color"
                android:textStyle="bold"
                android:textSize="23sp"
                android:ellipsize="end"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_circuit_detail_info"
        style="@style/linear_layout_info_items_detail"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/med_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_header_detail"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/med_margin"
            android:layout_marginBottom="@dimen/med_margin"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/card_title_circuit_detail_locality"
                    style="@style/detail_title_info_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circuit_detail_info_locality"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_circuit_detail_locality"
                    style="@style/detail_text_info_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Locality"
                    app:layout_constraintTop_toBottomOf="@+id/card_title_circuit_detail_locality"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_circuit_detail_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_circuit_detail_more_info"
            style="@style/btn_more_info" />
        <Button
            android:id="@+id/btn_circuit_detail_maps"
            style="@style/btn_more_info"
            android:text="@string/circuit_detail_info_btn_maps"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <ProgressBar
        android:id="@+id/pb_circuit_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>